Uncollapse SectionNav on mobile, other layout fixes

--- a/client/reader/search-stream/style.scss
+++ b/client/reader/search-stream/style.scss
@@ -36,6 +36,10 @@
 	}
 }
 
+.search-stream .search-stream__single-column-results {
+	padding-top: 150px;
+}
+
 .search-stream__input-card.card {
 	margin-bottom: 16px;
 	padding: 0;
@@ -194,63 +198,6 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 	}
 }
 
-// Post results and Site results
-.search-stream .section-nav {
-	box-shadow: none;
-	background: inherit;
-	border-bottom: 1px solid lighten( $gray, 30% );
-	padding-bottom: 0;
-	margin-bottom: 0;
-	min-height: 50px;
-	max-height: 50px;
-}
-
-.search-stream .search-stream__results {
-	display: flex;
-	padding-top: 135px;
-}
-
-.search-stream .search-stream__post-results {
-	display: flex;
-	flex-direction: column;
-}
-
-.search-stream .search-stream__site-results {
-	display: flex;
-	flex-direction: column;
-	max-width: 265px;
-	padding-left: 40px;
-}
-
-.search-stream .search-stream__single-column-results {
-	padding-top: 133px;
-}
-
-.search-stream .search-stream__post-header {
-	display: flex;
-	width: 100%;
-}
-
-.search-stream .search-stream__site-header {
-	display: flex;
-	padding-left: 40px;
-	max-width: 265px;
-	width: 100%;
-}
-
-.search-stream__headers {
-	display: flex;
-}
-
-.search-stream__results-header {
-	border-bottom: 2px solid lighten( $gray, 30% );
-	color: $gray;
-	font-weight: 600;
-	padding: 15px 0;
-	text-transform: uppercase;
-	width: 100%;
-}
-
 .is-reader-page .search-stream__input-card.card {
 	box-shadow: 0 0 0 2px lighten( $gray, 20% ), 0 1px 2px lighten( $gray, 30% );
 	margin-bottom: 0px;
@@ -276,4 +223,87 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 	right: 50px;
 	top: 11px;
 	z-index: z-index( 'root', '.search-stream__sort-picker' );
+}
+
+// Post and Site results
+.search-stream .section-nav {
+	box-shadow: none;
+	background: inherit;
+	border-bottom: 2px solid lighten( $gray, 20% );
+	padding-bottom: 0;
+	margin-bottom: 0;
+}
+
+.search-stream .search-stream__results {
+	display: flex;
+	margin-top: 140px;
+}
+
+.search-stream__headers {
+	color: $gray;
+	display: flex;
+	font-weight: 600;
+	list-style-type: none;
+	margin: 0;
+	padding-top: 20px;
+	text-transform: uppercase;
+}
+
+.search-stream .search-stream__site-header {
+	margin-left: 40px;
+	max-width: 265px;
+	width: 100%;
+}
+
+.search-stream .search-stream__post-header,
+.search-stream .search-stream__site-header {
+	border-bottom: 2px solid lighten( $gray, 30% );
+	padding-bottom: 10px;
+	width: 100%;
+}
+
+.search-stream .search-stream__site-results {
+	max-width: 265px;
+	padding-left: 40px;
+
+	.reader-subscription-list-item .follow-button__label {
+		display: none;
+	}
+}
+
+// Posts and sites Sites SectionNav
+.search-stream .section-nav-group {
+	display: flex;
+	width: 0;
+	flex: 1 0 auto;
+}
+
+.search-stream .section-nav-tabs__dropdown {
+	display: none;
+}
+
+.search-stream .section-nav__mobile-header {
+	display: none;
+}
+
+.search-stream .section-nav-tabs__list {
+	display: flex;
+
+	.section-nav-tab.is-selected {
+		border-bottom: 2px solid $gray-dark;
+	}
+}
+
+.search-stream .section-nav-tab__text {
+	font-weight: normal;
+	width: 100%;
+}
+
+.search-stream .is-selected .section-nav-tab__link {
+	background-color: transparent;
+	color: $blue-wordpress;
+
+	&:hover {
+		color: inherit;
+	}
 }
